# kokoro-mcp-server

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  FASTER_WHISPER_IMPLEMENTATION.md  FASTER_WHISPER_QUICK_REF.md  HINDI_QUICK_REF.md  HINDI_SUPPORT.md  INDIC_FIXES.md  INSTALL.md  INSTALLATION.md  KOKORO_HINDI_PHONETIC_GUIDE.md  LICENSE  MCP_MULTI_ENGINE_DONE.md  MCP_QUICK_REF.md  PROJECT_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SPEECH_TO_TEXT.md  STREAMLIT_CLOUD.md  STREAMLIT_QUICKSTART.md  STREAMLIT_README.md  STT_QUICK_REFERENCE.md  TUTORIAL.ipynb  advanced_tts.py  aparsoft_youtube_tts.py  docker-compose.yml  for_carbon_tts_generator.py  parler_tts_solution.py  pyproject.toml  requirements.txt  run_streamlit.bat  run_streamlit.py  run_streamlit.sh  streamlit_app.py  streamlit_requirements.txt  streamlit_utils.py  test_voice_issue.py  tts_generator.py  (+2 more)
.github/workflows/: ci.yml
.streamlit/: config.toml
aparsoft_tts/: PODCAST_GUIDELINES.md  __init__.py  cli.py  config.py  mcp_server.py  run_http_server.py
aparsoft_tts/core/: __init__.py  engine.py  engine_factory.py
aparsoft_tts/mcp_server/: README.md  USAGE.md  __init__.py  __main__.py  mcp_prompts.py  mcp_resources.py  mcp_server_main.py  mcp_tools.py  mcp_tools_educational.py  mcp_utils.py
aparsoft_tts/utils/: __init__.py  audio.py  exceptions.py  logging.py
config/: custom_config.json
examples/: basic_usage.py  hindi_tts.py  speech_to_text_example.py  youtube_workflow.py
src/aparsoft_tts/: __init__.py  cli.py  config.py
src/aparsoft_tts/core/: engine.py
src/aparsoft_tts/utils/: audio.py  exceptions.py
tests/: conftest.py  test_token_fix.py  test_voice_issue.py
tests/unit/: test_audio.py  test_engine.py
